build/antlr4cpp_generated_src/StatComp/StatCompParser.cpp

// Generated from /home/mayta/projects/CompilersTheory/StatComP/src/StatComp.g4 by ANTLR 4.13.2


#include "StatCompVisitor.h"

#include "StatCompParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct StatCompParserStaticData final {
  StatCompParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  StatCompParserStaticData(const StatCompParserStaticData&) = delete;
  StatCompParserStaticData(StatCompParserStaticData&&) = delete;
  StatCompParserStaticData& operator=(const StatCompParserStaticData&) = delete;
  StatCompParserStaticData& operator=(StatCompParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag statcompParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<StatCompParserStaticData> statcompParserStaticData = nullptr;

void statcompParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (statcompParserStaticData != nullptr) {
    return;
  }
#else
  assert(statcompParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<StatCompParserStaticData>(
    std::vector<std::string>{
      "prog", "stmt", "expr", "statFunc", "tableFunc", "arglist", "arrayInit", 
      "numlist", "num", "decltype"
    },
    std::vector<std::string>{
      "", "';'", "'Mean'", "'Median'", "'Mode'", "'Stdev'", "'Var'", "'Square_root'", 
      "'Range'", "'CoeffVar'", "'Quartile'", "'IQR'", "'Percentile'", "'Min'", 
      "'Max'", "'Sum'", "'Count'", "'Skewness'", "'Kurtosis'", "'Moment'", 
      "'Standardize'", "'ZProb'", "'InvZ'", "'NormalPDF'", "'NormalCDF'", 
      "'UniformPDF'", "'UniformCDF'", "'Print'", "'Freq'", "'AbsFreq'", 
      "'RelFreq'", "'AbsFreqCum'", "'RelFreqCum'", "'CrossTab'", "'^'", 
      "'+'", "'-'", "'*'", "'/'", "'//'", "'%'", "'='", "'('", "')'", "'{'", 
      "'}'", "'['", "']'", "','", "'int'", "'float'", "'string'", "'array'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "POW", "ADD", "SUB", "MUL", "DIV", "INTDIV", "MOD", "ASSIGN", "LPAR", 
      "RPAR", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "COMMA", "TINT", "TFLOAT", 
      "TSTRING", "ARRAY", "ID", "INT", "FLOAT", "STRING", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  statcompParserStaticData = std::move(staticData);
}

}

StatCompParser::StatCompParser(TokenStream *input) : StatCompParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

StatCompParser::StatCompParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  StatCompParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *statcompParserStaticData->atn, statcompParserStaticData->decisionToDFA, statcompParserStaticData->sharedContextCache, options);
}

StatCompParser::~StatCompParser() {
  delete _interpreter;
}

const atn::ATN& StatCompParser::getATN() const {
  return *statcompParserStaticData->atn;
}

std::string StatCompParser::getGrammarFileName() const {
  return "StatComp.g4";
}

const std::vector<std::string>& StatCompParser::getRuleNames() const {
  return statcompParserStaticData->ruleNames;
}

const dfa::Vocabulary& StatCompParser::getVocabulary() const {
  return statcompParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView StatCompParser::getSerializedATN() const {
  return statcompParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

StatCompParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<StatCompParser::StmtContext *> StatCompParser::ProgContext::stmt() {
  return getRuleContexts<StatCompParser::StmtContext>();
}

StatCompParser::StmtContext* StatCompParser::ProgContext::stmt(size_t i) {
  return getRuleContext<StatCompParser::StmtContext>(i);
}


size_t StatCompParser::ProgContext::getRuleIndex() const {
  return StatCompParser::RuleProg;
}


std::any StatCompParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

StatCompParser::ProgContext* StatCompParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, StatCompParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(23);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 143556722068291580) != 0)) {
      setState(20);
      stmt();
      setState(25);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

StatCompParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t StatCompParser::StmtContext::getRuleIndex() const {
  return StatCompParser::RuleStmt;
}

void StatCompParser::StmtContext::copyFrom(StmtContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UpdateSymbolContext ------------------------------------------------------------------

StatCompParser::DecltypeContext* StatCompParser::UpdateSymbolContext::decltype_() {
  return getRuleContext<StatCompParser::DecltypeContext>(0);
}

tree::TerminalNode* StatCompParser::UpdateSymbolContext::ID() {
  return getToken(StatCompParser::ID, 0);
}

tree::TerminalNode* StatCompParser::UpdateSymbolContext::ASSIGN() {
  return getToken(StatCompParser::ASSIGN, 0);
}

StatCompParser::ExprContext* StatCompParser::UpdateSymbolContext::expr() {
  return getRuleContext<StatCompParser::ExprContext>(0);
}

StatCompParser::UpdateSymbolContext::UpdateSymbolContext(StmtContext *ctx) { copyFrom(ctx); }


std::any StatCompParser::UpdateSymbolContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitUpdateSymbol(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArrayDeclContext ------------------------------------------------------------------

tree::TerminalNode* StatCompParser::ArrayDeclContext::ARRAY() {
  return getToken(StatCompParser::ARRAY, 0);
}

StatCompParser::DecltypeContext* StatCompParser::ArrayDeclContext::decltype_() {
  return getRuleContext<StatCompParser::DecltypeContext>(0);
}

tree::TerminalNode* StatCompParser::ArrayDeclContext::ID() {
  return getToken(StatCompParser::ID, 0);
}

tree::TerminalNode* StatCompParser::ArrayDeclContext::ASSIGN() {
  return getToken(StatCompParser::ASSIGN, 0);
}

StatCompParser::ArrayInitContext* StatCompParser::ArrayDeclContext::arrayInit() {
  return getRuleContext<StatCompParser::ArrayInitContext>(0);
}

StatCompParser::ArrayDeclContext::ArrayDeclContext(StmtContext *ctx) { copyFrom(ctx); }


std::any StatCompParser::ArrayDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitArrayDecl(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PrintExprContext ------------------------------------------------------------------

StatCompParser::ExprContext* StatCompParser::PrintExprContext::expr() {
  return getRuleContext<StatCompParser::ExprContext>(0);
}

StatCompParser::PrintExprContext::PrintExprContext(StmtContext *ctx) { copyFrom(ctx); }


std::any StatCompParser::PrintExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitPrintExpr(this);
  else
    return visitor->visitChildren(this);
}
StatCompParser::StmtContext* StatCompParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 2, StatCompParser::RuleStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(42);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case StatCompParser::T__1:
      case StatCompParser::T__2:
      case StatCompParser::T__3:
      case StatCompParser::T__4:
      case StatCompParser::T__5:
      case StatCompParser::T__6:
      case StatCompParser::T__7:
      case StatCompParser::T__8:
      case StatCompParser::T__9:
      case StatCompParser::T__10:
      case StatCompParser::T__11:
      case StatCompParser::T__12:
      case StatCompParser::T__13:
      case StatCompParser::T__14:
      case StatCompParser::T__15:
      case StatCompParser::T__16:
      case StatCompParser::T__17:
      case StatCompParser::T__18:
      case StatCompParser::T__19:
      case StatCompParser::T__20:
      case StatCompParser::T__21:
      case StatCompParser::T__22:
      case StatCompParser::T__23:
      case StatCompParser::T__24:
      case StatCompParser::T__25:
      case StatCompParser::T__26:
      case StatCompParser::T__27:
      case StatCompParser::T__28:
      case StatCompParser::T__29:
      case StatCompParser::T__30:
      case StatCompParser::T__31:
      case StatCompParser::T__32:
      case StatCompParser::SUB:
      case StatCompParser::LPAR:
      case StatCompParser::ID:
      case StatCompParser::INT:
      case StatCompParser::FLOAT:
      case StatCompParser::STRING: {
        _localctx = _tracker.createInstance<StatCompParser::PrintExprContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(26);
        expr(0);
        setState(27);
        match(StatCompParser::T__0);
        break;
      }

      case StatCompParser::TINT:
      case StatCompParser::TFLOAT:
      case StatCompParser::TSTRING: {
        _localctx = _tracker.createInstance<StatCompParser::UpdateSymbolContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(29);
        decltype_();
        setState(30);
        match(StatCompParser::ID);
        setState(31);
        match(StatCompParser::ASSIGN);
        setState(32);
        expr(0);
        setState(33);
        match(StatCompParser::T__0);
        break;
      }

      case StatCompParser::ARRAY: {
        _localctx = _tracker.createInstance<StatCompParser::ArrayDeclContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(35);
        match(StatCompParser::ARRAY);
        setState(36);
        decltype_();
        setState(37);
        match(StatCompParser::ID);
        setState(38);
        match(StatCompParser::ASSIGN);
        setState(39);
        arrayInit();
        setState(40);
        match(StatCompParser::T__0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

StatCompParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t StatCompParser::ExprContext::getRuleIndex() const {
  return StatCompParser::RuleExpr;
}

void StatCompParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ExprNegContext ------------------------------------------------------------------

tree::TerminalNode* StatCompParser::ExprNegContext::SUB() {
  return getToken(StatCompParser::SUB, 0);
}

StatCompParser::ExprContext* StatCompParser::ExprNegContext::expr() {
  return getRuleContext<StatCompParser::ExprContext>(0);
}

StatCompParser::ExprNegContext::ExprNegContext(ExprContext *ctx) { copyFrom(ctx); }


std::any StatCompParser::ExprNegContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitExprNeg(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprTableFuncContext ------------------------------------------------------------------

StatCompParser::TableFuncContext* StatCompParser::ExprTableFuncContext::tableFunc() {
  return getRuleContext<StatCompParser::TableFuncContext>(0);
}

tree::TerminalNode* StatCompParser::ExprTableFuncContext::LPAR() {
  return getToken(StatCompParser::LPAR, 0);
}

tree::TerminalNode* StatCompParser::ExprTableFuncContext::RPAR() {
  return getToken(StatCompParser::RPAR, 0);
}

StatCompParser::ArglistContext* StatCompParser::ExprTableFuncContext::arglist() {
  return getRuleContext<StatCompParser::ArglistContext>(0);
}

StatCompParser::ExprTableFuncContext::ExprTableFuncContext(ExprContext *ctx) { copyFrom(ctx); }


std::any StatCompParser::ExprTableFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitExprTableFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprParContext ------------------------------------------------------------------

tree::TerminalNode* StatCompParser::ExprParContext::LPAR() {
  return getToken(StatCompParser::LPAR, 0);
}

StatCompParser::ExprContext* StatCompParser::ExprParContext::expr() {
  return getRuleContext<StatCompParser::ExprContext>(0);
}

tree::TerminalNode* StatCompParser::ExprParContext::RPAR() {
  return getToken(StatCompParser::RPAR, 0);
}

StatCompParser::ExprParContext::ExprParContext(ExprContext *ctx) { copyFrom(ctx); }


std::any StatCompParser::ExprParContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitExprPar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprAddSubContext ------------------------------------------------------------------

std::vector<StatCompParser::ExprContext *> StatCompParser::ExprAddSubContext::expr() {
  return getRuleContexts<StatCompParser::ExprContext>();
}

StatCompParser::ExprContext* StatCompParser::ExprAddSubContext::expr(size_t i) {
  return getRuleContext<StatCompParser::ExprContext>(i);
}

tree::TerminalNode* StatCompParser::ExprAddSubContext::ADD() {
  return getToken(StatCompParser::ADD, 0);
}

tree::TerminalNode* StatCompParser::ExprAddSubContext::SUB() {
  return getToken(StatCompParser::SUB, 0);
}

StatCompParser::ExprAddSubContext::ExprAddSubContext(ExprContext *ctx) { copyFrom(ctx); }


std::any StatCompParser::ExprAddSubContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitExprAddSub(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprStringContext ------------------------------------------------------------------

tree::TerminalNode* StatCompParser::ExprStringContext::STRING() {
  return getToken(StatCompParser::STRING, 0);
}

StatCompParser::ExprStringContext::ExprStringContext(ExprContext *ctx) { copyFrom(ctx); }


std::any StatCompParser::ExprStringContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitExprString(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprVarContext ------------------------------------------------------------------

tree::TerminalNode* StatCompParser::ExprVarContext::ID() {
  return getToken(StatCompParser::ID, 0);
}

StatCompParser::ExprVarContext::ExprVarContext(ExprContext *ctx) { copyFrom(ctx); }


std::any StatCompParser::ExprVarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitExprVar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprPowContext ------------------------------------------------------------------

std::vector<StatCompParser::ExprContext *> StatCompParser::ExprPowContext::expr() {
  return getRuleContexts<StatCompParser::ExprContext>();
}

StatCompParser::ExprContext* StatCompParser::ExprPowContext::expr(size_t i) {
  return getRuleContext<StatCompParser::ExprContext>(i);
}

tree::TerminalNode* StatCompParser::ExprPowContext::POW() {
  return getToken(StatCompParser::POW, 0);
}

StatCompParser::ExprPowContext::ExprPowContext(ExprContext *ctx) { copyFrom(ctx); }


std::any StatCompParser::ExprPowContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitExprPow(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprLiteralContext ------------------------------------------------------------------

StatCompParser::NumContext* StatCompParser::ExprLiteralContext::num() {
  return getRuleContext<StatCompParser::NumContext>(0);
}

StatCompParser::ExprLiteralContext::ExprLiteralContext(ExprContext *ctx) { copyFrom(ctx); }


std::any StatCompParser::ExprLiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitExprLiteral(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprArrayAccessContext ------------------------------------------------------------------

tree::TerminalNode* StatCompParser::ExprArrayAccessContext::ID() {
  return getToken(StatCompParser::ID, 0);
}

tree::TerminalNode* StatCompParser::ExprArrayAccessContext::LBRACK() {
  return getToken(StatCompParser::LBRACK, 0);
}

StatCompParser::ExprContext* StatCompParser::ExprArrayAccessContext::expr() {
  return getRuleContext<StatCompParser::ExprContext>(0);
}

tree::TerminalNode* StatCompParser::ExprArrayAccessContext::RBRACK() {
  return getToken(StatCompParser::RBRACK, 0);
}

StatCompParser::ExprArrayAccessContext::ExprArrayAccessContext(ExprContext *ctx) { copyFrom(ctx); }


std::any StatCompParser::ExprArrayAccessContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitExprArrayAccess(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprMulDivContext ------------------------------------------------------------------

std::vector<StatCompParser::ExprContext *> StatCompParser::ExprMulDivContext::expr() {
  return getRuleContexts<StatCompParser::ExprContext>();
}

StatCompParser::ExprContext* StatCompParser::ExprMulDivContext::expr(size_t i) {
  return getRuleContext<StatCompParser::ExprContext>(i);
}

tree::TerminalNode* StatCompParser::ExprMulDivContext::MUL() {
  return getToken(StatCompParser::MUL, 0);
}

tree::TerminalNode* StatCompParser::ExprMulDivContext::DIV() {
  return getToken(StatCompParser::DIV, 0);
}

tree::TerminalNode* StatCompParser::ExprMulDivContext::INTDIV() {
  return getToken(StatCompParser::INTDIV, 0);
}

tree::TerminalNode* StatCompParser::ExprMulDivContext::MOD() {
  return getToken(StatCompParser::MOD, 0);
}

StatCompParser::ExprMulDivContext::ExprMulDivContext(ExprContext *ctx) { copyFrom(ctx); }


std::any StatCompParser::ExprMulDivContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitExprMulDiv(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprStatFuncContext ------------------------------------------------------------------

StatCompParser::StatFuncContext* StatCompParser::ExprStatFuncContext::statFunc() {
  return getRuleContext<StatCompParser::StatFuncContext>(0);
}

tree::TerminalNode* StatCompParser::ExprStatFuncContext::LPAR() {
  return getToken(StatCompParser::LPAR, 0);
}

tree::TerminalNode* StatCompParser::ExprStatFuncContext::RPAR() {
  return getToken(StatCompParser::RPAR, 0);
}

StatCompParser::ArglistContext* StatCompParser::ExprStatFuncContext::arglist() {
  return getRuleContext<StatCompParser::ArglistContext>(0);
}

StatCompParser::ExprStatFuncContext::ExprStatFuncContext(ExprContext *ctx) { copyFrom(ctx); }


std::any StatCompParser::ExprStatFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitExprStatFunc(this);
  else
    return visitor->visitChildren(this);
}

StatCompParser::ExprContext* StatCompParser::expr() {
   return expr(0);
}

StatCompParser::ExprContext* StatCompParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  StatCompParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  StatCompParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, StatCompParser::RuleExpr, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(73);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<ExprNegContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(45);
      match(StatCompParser::SUB);
      setState(46);
      expr(11);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<ExprParContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(47);
      match(StatCompParser::LPAR);
      setState(48);
      expr(0);
      setState(49);
      match(StatCompParser::RPAR);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<ExprLiteralContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(51);
      num();
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<ExprStringContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(52);
      match(StatCompParser::STRING);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<ExprVarContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(53);
      match(StatCompParser::ID);
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<ExprArrayAccessContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(54);
      match(StatCompParser::ID);
      setState(55);
      match(StatCompParser::LBRACK);
      setState(56);
      expr(0);
      setState(57);
      match(StatCompParser::RBRACK);
      break;
    }

    case 7: {
      _localctx = _tracker.createInstance<ExprStatFuncContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(59);
      statFunc();
      setState(60);
      match(StatCompParser::LPAR);
      setState(62);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 135112472766971900) != 0)) {
        setState(61);
        arglist();
      }
      setState(64);
      match(StatCompParser::RPAR);
      break;
    }

    case 8: {
      _localctx = _tracker.createInstance<ExprTableFuncContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(66);
      tableFunc();
      setState(67);
      match(StatCompParser::LPAR);
      setState(69);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 135112472766971900) != 0)) {
        setState(68);
        arglist();
      }
      setState(71);
      match(StatCompParser::RPAR);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(86);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(84);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<ExprPowContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(75);

          if (!(precpred(_ctx, 10))) throw FailedPredicateException(this, "precpred(_ctx, 10)");
          setState(76);
          match(StatCompParser::POW);
          setState(77);
          expr(11);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<ExprMulDivContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(78);

          if (!(precpred(_ctx, 9))) throw FailedPredicateException(this, "precpred(_ctx, 9)");
          setState(79);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & 2061584302080) != 0))) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(80);
          expr(10);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<ExprAddSubContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(81);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(82);
          _la = _input->LA(1);
          if (!(_la == StatCompParser::ADD

          || _la == StatCompParser::SUB)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(83);
          expr(9);
          break;
        }

        default:
          break;
        } 
      }
      setState(88);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- StatFuncContext ------------------------------------------------------------------

StatCompParser::StatFuncContext::StatFuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t StatCompParser::StatFuncContext::getRuleIndex() const {
  return StatCompParser::RuleStatFunc;
}


std::any StatCompParser::StatFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StatCompVisitor*>(visitor))
    return parserVisitor->visitStatFunc(this);
  else
    return visitor->visitChildren(this);
}

StatCompParser::StatFuncContext* StatCompParser::statFunc() {
  StatFuncContext *_localctx = _tracker.createInstance<StatFuncContext>(_ctx, getState());
  enterRule(_localctx, 6, StatCompParser::RuleStatFunc);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 268435452) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}
